<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context="com.example.customer_dinein.SendOTPActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/sign_in"
            android:textColor="@color/colorTextPrimary"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sendotp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/we_ll_send_you_an_one_time_password_on_your_mobile_number"
            android:textColor="@color/colorTextSecondary"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/enter_mobile_number"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/_91"
                android:padding="10dp"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@drawable/textview_border"/>

            <TextView
                android:layout_width="20dp"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:text=" - "
                android:gravity="center_vertical"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorTextPrimary"
                android:textSize="26sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputMobile"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:hint="@string/_1234567890"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="10"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@drawable/textview_border"
                android:textCursorDrawable="@drawable/color_cursor" />

            <requestFocus/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonGetOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="60dp"
                android:background="@drawable/background_button"
                android:text="@string/get_otp"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold" />
            
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>




    </LinearLayout>
</ScrollView>