<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context="com.example.customer_dinein.FeedbackActivity">

    <include
        layout="@layout/activity_nav_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/food_quality"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:text="@string/food_quality"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RatingBar
                style="@style/customRatingBar"
                android:id="@+id/qualityRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="9dp"
                android:background="@color/colorTextPrimary"
                android:rating="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/food_quantity"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:text="@string/food_quantity"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RatingBar
                style="@style/customRatingBar"
                android:id="@+id/quantityRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@color/colorTextPrimary"
                android:rating="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/service"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:text="@string/service"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RatingBar
                style="@style/customRatingBar"
                android:id="@+id/serviceRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="58dp"
                android:background="@color/colorTextPrimary"
                android:rating="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:text="@string/price"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RatingBar
                style="@style/customRatingBar"
                android:id="@+id/priceRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="78dp"
                android:background="@color/colorTextPrimary"
                android:rating="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/ambience"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:text="@string/ambience"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RatingBar
                style="@style/customRatingBar"
                android:id="@+id/ambienceRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="38dp"
                android:background="@color/colorTextPrimary"
                android:rating="0" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewThankU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:text="Thank you for your valuable feedback !!"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24dp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="120dp"
            android:background="@drawable/background_button"
            android:text="@string/exit"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="60dp"
            android:background="@drawable/background_button"
            android:text="@string/submit_feedback"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>