<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_height="wrap_content"
    android:background="@color/colorGrayBlack"
    android:layout_width="match_parent">

    <ImageView
        android:id="@+id/foodItem_Image"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:layout_height="70dp"
        android:layout_width="70dp"
        android:src="@drawable/dinein_app_logo"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/foodItem_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/foodItem_Image"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:text="@string/food_item_name"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/foodItem_Category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/foodItem_Image"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:text="@string/food_item_name"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/foodItem_Price"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:text="@string/food_item_price"
            android:textColor="@color/colorTextSecondary"
            android:layout_toRightOf="@+id/foodItem_Image"
            android:layout_below="@+id/foodItem_Category"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="16sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_addtocart"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_button"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:text="@string/add_to_cart"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgMinus"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="35dp"
            android:padding="2dp"
            android:visibility="gone"
            android:src="@drawable/cart_minus" />

        <TextView
            android:id="@+id/txtNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textSize="26dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="45dp"
            android:inputType="number"
            android:textStyle="bold"
            android:visibility="gone"
            android:textColor="@color/colorTextPrimary"/>

        <ImageView
            android:id="@+id/imgPlus"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/cart_plus"
            android:visibility="gone"
            android:padding="2dp"/>

        <ImageView
            android:id="@+id/remove_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/remove_icon"
            android:visibility="gone"
            android:padding="2dp"/>

    </RelativeLayout>

</LinearLayout>